splunk-ingress.yaml
# Splunk LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: splunk-lb
  namespace: splunk
  labels:
    azure.workload.identity/use: "true"
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.224.0.100
  selector:
    app.kubernetes.io/instance: splunk-sh-deployer
    app.kubernetes.io/component: search-head
    app.kubernetes.io/name: deployer
    app.kubernetes.io/part-of: splunk-sh-search-head
  ports:
    - name: splunk-lb-port
      protocol: TCP
      port: 8089
      targetPort: 8089
---
# Splunk Federation Service Cluster IP
apiVersion: v1
kind: Service
metadata:
  name: splunk-federation
  namespace: splunk
spec:
  type: ClusterIP
  ports:
  - port: 8089
    targetPort: 8089
  selector:
    app: splunk-federation
---
# Web Service Cluster IP
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: splunk
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web-app
---
# Splunk Federation Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-federation-ingress
  namespace: splunk
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: federation.splunk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-federation
            port:
              number: 8089
---
# Web App 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: splunk
spec:
  ingressClassName: nginx
  rules:
  - host: web.splunk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
